# PPairS

./: .gitignore  LICENSE  README.md  pyproject.toml  sandbox.ipynb  workbook2.ipynb  workbook3.ipynb  workbook4.ipynb
colab/: logits.ipynb
data/: hanna.jsonl  newsroom.jsonl  process_data.ipynb  process_data.py  summeval.jsonl
dev/: 000 - data.ipynb  001 - prompts.ipynb  002 - prompts_science.ipynb
evaluations/: 002 - benchmark_probe.ipynb
scripts/: prompts_short.py
src/PPairS/: classify.py  data.py  dataset_probe_s.py  datasets.py  inference.py  insert.py  new_inference.py  new_pipeline.py  pipeline.py  probe_s.py  probe_u.py  prompts.py  sort.py  trainer.py  utils.py
src/PPairS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dev/: baseline_pref_probs.py  build_prompts.py  build_prompts_benchmark.ipynb  cosine_sim.ipynb  inference.py  pairwise_comparisons.py  preference_probs.py  probe_results.py  results.py
src/dev/benchmarks/: build_prompts.py  compare.py  contrast.py  process_data.py  prompts_subset.py  results.py  score.py
src/dev/build_prompts/: rocstories.py  scoring-datasets.py
src/dev/causal/: SGDClassifier.ipynb  adversarial.ipynb  harvest.py
src/dev/climatex/: build_prompts.py  classifier.py  contrast.py  embeddings.py  harvest.py  insert.py  parsepdf.py  pca.ipynb  prompts.py  topic-umap.ipynb  topicanalysis.ipynb  topicmodelling.ipynb
src/dev/climatex_full/: embeddings.py  parsepdf.py  topicanalysis.ipynb  topicmodelling.ipynb  (+1 more)
utils/: prompts.py  prompts_science.py  science_feedback_scraping.py  sort.py  utils.py
(+20 files in other folders)
