[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PPairS"
version = "0.0.1"
description = "TODO"
authors = [{name = "Sharan Maiya", email = "sm2783@cam.ac.uk"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]