[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PPairS"
version = "1.0.0"
description = "Pairwise Preference Search with Linear Probing"
authors = [{name = "Sharan Maiya", email = "sm2783@cam.ac.uk"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "scipy>=1.13.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.2",
    "torch>=2.3.0",
    "accelerate>=0.31.0",
    "jaxtyping>=0.2.28",
    "transformers>=4.42.3",
    "pypdf>=4.2.0",
    "nltk>=3.8.1",
    "bertopic>=0.16.2",
    "umap>=0.1.1",
    "beautifulsoup4>=4.12.3",
    "dill>=0.3.8",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]